pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
