test-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: test-pod-1
spec:
  containers:
  - name: nginx
    image: gcr.io/google-containers/nginx:latest
