test-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
spec:
  containers:
  - name: nginx
    image: xyz.io/nginx:latest
