deploy-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: whitelist-registry
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: whitelist-registry
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: whitelist-registry
  name: whitelist-registry
spec:
  containers:
  - image: dhimanhalder/whitelist-registry:1.0
    name: whitelist-registry
    imagePullPolicy: Always
    ports:
    - containerPort: 8443
