webhook-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whitelist-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whitelist-registry
  template:
    metadata:
      labels:
        app: whitelist-registry
      name: whitelist-registry
    spec:
      containers:
      - image: dhimanhalder/whitelist-registry:1.0
        name: whitelist-registry
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: whitelist-registry
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: whitelist-registry
