admission-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: com.foo.whitelist-registry
webhooks:
- name: com.foo.whitelist-registry
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: default
      name: whitelist-registry
      path: "/"
    caBundle: CA_BUNDLE
  admissionReviewVersions: ["v1"]
  sideEffects: None
