webhook-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: com.foo.whitelist-registry
webhooks:
- name: com.foo.whitelist-registry
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: default
      name: whitelist-registry
      path: "/"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0NRQ0dlUlJjZWI3THVUQU5CZ2txaGtpRzl3MEJBUXNGQURBdk1TMHdLd1lEVlFRRERDUlgKYUdsMFpXeHBjM1FnVW1WbmFYTjBjbmtnUTI5dWRISnZiR3hsY2lCWFpXSnZiMnN3SGhjTk1qRXdNVEV6TURjdwpNREF3V2hjTk1qRXdNakV5TURjd01EQXdXakF2TVMwd0t3WURWUVFERENSWGFHbDBaV3hwYzNRZ1VtVm5hWE4wCmNua2dRMjl1ZEhKdmJHeGxjaUJYWldKdmIyc3dnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRREMzWi9xajlkQmM1aDVCR1BVTDQraGJoQkRRVlk4U2VnOUJjTVVWSUtwM2tFRTl4TXFxVGlONHVuVwpSVU80Y0cxZzZQK0 [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
